# flappybird

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: animation.hpp  application.hpp  button.hpp  game.hpp  resource.hpp  result.hpp  scene.hpp
src/: CMakeLists.txt  animation.cpp  application.cpp  button.cpp  main.cpp  resource.cpp
